force-app/src/objects/c2g__MultipleCompaniesAccountConfig__c.object
<CustomObject>
    <description>Stores account details related to the Multiple Companies Configuration.</description>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The account that relates to the multiple companies account config.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Multiple Companies Account Config</relationshipLabel>
        <relationshipName>MCAAccounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountsPayableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The accounts payable general ledger account associated with the multiple companies account config.</description>
        <inlineHelpText>The accounts payable general ledger account associated with this multiple companies account config.</inlineHelpText>
        <label>Accounts Payable Control</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Multiple Companies Account Config</relationshipLabel>
        <relationshipName>MCAAccountsPayableControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountsReceivableControl__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The accounts receivable general ledger account, or trade debtors general ledger account, associated with this multiple companies account config.</description>
        <inlineHelpText>The accounts receivable general ledger account, or trade debtors general ledger account, associated with this multiple companies account config.</inlineHelpText>
        <label>Accounts Receivable Control</label>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Multiple Companies Account Config</relationshipLabel>
        <relationshipName>MCAAccountsReceivableControls</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The Accounting company that relates to the multiple companies account config.</description>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Multiple Companies Account Config</relationshipLabel>
        <relationshipName>MCACompanies</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__FinanceContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is obsolete. It has been replaced by c2g__MultiAccountContact__c.c2g__PrimaryContact__c.</description>
        <label>DEPRECATED: Finance Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Multiple Companies Account Config</relationshipLabel>
        <relationshipName>MCAFinanceContacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__InputVATCode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The input VAT/GST tax code that relates to the multiple companies account config.</description>
        <label>Input VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Multiple Companies Account Config</relationshipLabel>
        <relationshipName>MCAInputVATCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__MultiAccountCreditTerms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The multi-account credit terms associated with the multiple companies account config.</description>
        <inlineHelpText>The multi-account credit terms associated with this multiple companies account config.</inlineHelpText>
        <label>Multi-Account Credit Terms</label>
        <referenceTo>c2g__MultiAccountCreditTerms__c</referenceTo>
        <relationshipLabel>Multiple Companies Account Configs</relationshipLabel>
        <relationshipName>MCACreditTerms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OutputVATCode__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The output VAT/GST tax code that relates to the multiple companies account config.</description>
        <label>Output VAT/GST Code</label>
        <referenceTo>c2g__codaTaxCode__c</referenceTo>
        <relationshipLabel>Multiple Companies Account Config</relationshipLabel>
        <relationshipName>MCAOutputVATCodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__TaxStatus__c</fullName>
        <description>The tax status of the multiple companies account config.</description>
        <label>Tax Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                    <default>true</default>
                    <label>Home</label>
                </value>
                <value>
                    <fullName>EC Registered</fullName>
                </value>
                <value>
                    <fullName>EC Non-Registered</fullName>
                </value>
                <value>
                    <fullName>Export</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Multiple Companies Account Config</label>
    <nameField>
        <displayFormat>MCA-{0000}</displayFormat>
        <label>Multiple Companies Account Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Multiple Companies Account Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>